menu alignment issues

--- a/wp-content/themes/ajency-portfolio/scss/_home.scss
+++ b/wp-content/themes/ajency-portfolio/scss/_home.scss
@@ -22,10 +22,11 @@
     }
     &__menu{
         overflow: hidden;
-        height: 50px;
+        // height: 50px;
         position: relative;
-        margin-top: 56px;
+        margin-top: 58px;
         padding-top: 0;
+        padding-right: 30px;
         perspective: 100px;
         cursor: pointer;
         transition: height 0.25s, margin 0.25s;
@@ -50,20 +51,25 @@
         //     background-image: linear-gradient(#fff, transparent);
         // }
         .actionable{
-            // margin: -22px 0 0;
-            margin: 0;
-            transform: translateY(-22px);
-            transition: margin 0.25s, color 0.25s, transform 0.25s, opacity 0.25s, visibility 0.25s;
+            margin: -43px 0 0;
+            // margin: 0;
+            // transform: translateY(-22px);
+            transition: margin 0.25s, color 0.15s, transform 0.25s, opacity 0.25s, visibility 0.25s, line-height 0.25s;
             pointer-events: none;
             display: block;
-            line-height: 1.4;
+            line-height: 1.3;
             text-transform: lowercase;
             cursor: pointer;
+            opacity: 0;
+            color: $gray-600;
             &.is-active{
-                // margin-top: 0;
-                transform: translateY(-46px);
+                margin-top: 0;
+                // transform: translateY(-46px);
+                transform: translateY(0);
                 position: relative;
                 display: inline-block;
+                opacity: 1;
+                color: $gray-600;
                 // animation: slideltr 1s linear forwards;
                 animation-name: slideltr;
                 animation-duration: 1s;
@@ -105,7 +111,7 @@
                 & ~ .actionable{
                     margin-top: 0;
                     transform-style: preserve-3d;
-                    transform: rotateX(-25deg) translateY(25px);
+                    transform: rotateX(0) translateY(25px);
                     // transform: rotateX(0) translateY(25px);
                     color: $gray-600;
                     opacity: 0;
@@ -113,10 +119,11 @@
             }
             &.is-above{
                 transform-style: preserve-3d;
-                transform: rotateX(25deg) translateY(-50px);
+                transform: rotateX(0) translateY(-50px);
                 // transform: rotateX(0) translateY(-45px);
                 color: $gray-600;
                 opacity: 0;
+                // margin-top: -45px;
             }
         }
 
@@ -145,8 +152,8 @@
         }
 
         &.is-active{
-            height: 260px;
-            margin-top: 56px;
+            // height: 260px;
+            // margin-top: 56px;
             overflow: visible;
             &:before, &:after{
                 opacity: 0;
@@ -154,8 +161,10 @@
             }
             .actionable{
                 margin-top: 0;
-                line-height: 1.5;
+                margin-bottom: 5px;
+                // line-height: 1.5;
                 pointer-events: auto;
+                opacity: 1;
                 &:hover{
                     color: $gray-800 !important;
                 }
